# metapyle

./: .gitignore  CHANGELOG.md  README.md  macrobond.md  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: adding-api-sources.agent.md  upstream-tarballs.agent.md
.github/skills/adding-api-sources/: SKILL.md
.github/skills/making-git-commits/: SKILL.md
.github/skills/upstream-tarballs/: SKILL.md
.github/skills/writing-changelogs/: SKILL.md
.github/workflows/: ci.yml
docs/: api-resources.md  managing-upstream-tarballs.md  raw-api-examples.md  smoke-test.md  user-guide.md
docs/misc/: macrobond.md  test_cases.md
docs/plans/: 2025-12-25-metapyle-design.md  2025-12-26-frequency-redesign-design.md  2025-12-26-frequency-redesign-implementation.md  2025-12-26-metapyle-implementation.md  2025-12-27-column-naming-design.md  2025-12-27-column-naming-implementation.md  2025-12-27-macrobond-source-design.md  2025-12-27-macrobond-source-implementation.md  2025-12-28-batch-fetch-design.md  2025-12-28-batch-fetch-implementation.md  2025-12-28-catalog-csv-tools-design.md  2025-12-28-catalog-csv-tools-implementation.md  2025-12-28-integration-tests-design.md  2025-12-28-integration-tests-implementation.md  2025-12-29-gsquant-source-design.md  2025-12-29-gsquant-source-implementation.md  2025-12-29-smoke-test-design.md  2025-12-29-smoke-test-implementation.md  2025-12-31-user-testing-fixes-design.md  2025-12-31-user-testing-fixes-implementation.md  2026-01-01-unified-options-design.md  2026-01-01-unified-options-implementation.md  2026-01-01-unified-series-design.md  2026-01-01-unified-series-implementation.md  2026-01-02-case-insensitive-fallback-design.md  2026-01-02-normalize-dataframe-design.md  2026-01-02-normalize-dataframe-implementation.md  2026-01-02-source-attribute-validation-design.md  2026-01-02-source-attribute-validation-implementation.md  2026-01-02-stale-data-warning-design.md
src/metapyle/: __init__.py  cache.py  catalog.py  client.py  exceptions.py  processing.py
src/metapyle/sources/: __init__.py  base.py  bloomberg.py  gsquant.py  localfile.py  macrobond.py
tests/: conftest.py
tests/integration/: conftest.py  test_bloomberg.py  test_cross_source.py  test_gsquant.py  test_macrobond.py
tests/integration/fixtures/: bloomberg.yaml  combined.yaml  gsquant.yaml  macrobond.yaml
tests/unit/: test_cache.py  test_cache_utils.py  test_catalog.py  test_catalog_bloomberg_field.py  test_client.py  test_client_column_fallback.py  test_client_stale_data.py  test_exceptions.py  test_processing.py  test_processing_long.py  test_processing_tall.py  test_public_api.py  test_sources_base.py  test_sources_bloomberg.py  test_sources_gsquant.py  test_sources_index_name.py  test_sources_localfile.py  test_sources_macrobond.py  test_sources_normalize.py
