[project]
name = "metapyle"
version = "0.1.1"
description = "Early-stage unified interface for querying financial time-series data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    { name = "Stabile Frisur", email = "26568863+stabilefrisur@users.noreply.github.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "macrobond-data-api>=3.0.4",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "xbbg>=0.10.0",
]

[project.urls]
Homepage = "https://github.com/stabilefrisur/metapyle"
Repository = "https://github.com/stabilefrisur/metapyle"
Documentation = "https://github.com/stabilefrisur/metapyle#readme"
Issues = "https://github.com/stabilefrisur/metapyle/issues"
Changelog = "https://github.com/stabilefrisur/metapyle/blob/master/CHANGELOG.md"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/metapyle"]

[tool.hatch.build.targets.sdist]
include = [
    "src/metapyle/**/*.py",
    "src/metapyle/**/*.json",
    "src/metapyle/**/*.yaml",
    "src/metapyle/**/*.md",
    "src/metapyle/py.typed",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["macrobond_data_api.*", "xbbg.*", "pandas.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--tb=short"]
markers = ["integration: integration tests requiring external credentials"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:", "@abstractmethod"]
